--- a/index.html
+++ b/index.html
@@ -3,7 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>responsive website</title>
+    <link rel="stylesheet" href="styling.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="head-nav">
+      <img src="" alt="logo" />
+      <nav>
+        <a href="/home">Home</a>
+        <a href="/feature">Feature</a>
+        <a href="/about">About</a>
+        <a href="/contact">Contact</a>
+      </nav>
+    </header>
+    <main>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
