--- a/index.html
+++ b/index.html
@@ -3,24 +3,86 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>responsive website</title>
+    <title>CSS Grid Website Layout</title>
     <link rel="stylesheet" href="styling.css" />
   </head>
   <body>
-    <header class="head-nav">
-      <img src="" alt="logo" />
-      <nav>
-        <a href="/home">Home</a>
-        <a href="/feature">Feature</a>
-        <a href="/about">About</a>
-        <a href="/contact">Contact</a>
-      </nav>
-    </header>
-    <main>
-      <section></section>
-      <section></section>
-      <section></section>
-    </main>
-    <footer></footer>
+    <div class="container">
+      <header class="header">
+        <div class="logo">TechVenture</div>
+        <nav>
+          <ul class="nav-menu">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <main class="main">
+        <div class="row">
+          <div class="column">
+            <h1>Innovate Your Future with TechVenture</h1>
+            <p>
+              We build cuttin-edge technology solutions that transform business
+              and empower teams to achieve extraordinary results.
+            </p>
+            <div class="btn-flex">
+              <button class="btn-start">Get Started</button>
+              <button class="btn-more">Learn More</button>
+            </div>
+          </div>
+          <div class="column">
+            <img
+              src="https://media.istockphoto.com/id/1720565768/photo/two-business-people-using-a-laptop-together-in-an-office.webp?a=1&b=1&s=612x612&w=0&k=20&c=jo4K9VExhrzHxkFxbzJmMFC1b9c4NxK8LZ-leeeNy-E="
+              alt="two people collaborating on a computer" />
+          </div>
+        </div>
+
+        <h2>Our Core Features</h2>
+        <div class="content-grid">
+          <div class="card">
+            <h3>Responsive Design</h3>
+            <p>
+              The layout adapts to different screen sizes using CSS Grid's
+              powerful features.
+            </p>
+          </div>
+          <div class="card">
+            <h3>Named Areas</h3>
+            <p>Grid areas are named for better readability and maintenance.</p>
+          </div>
+          <div class="card">
+            <h3>Flexible Sizing</h3>
+            <p>
+              Columns and rows adjust automatically based on content and screen
+              size.
+            </p>
+          </div>
+        </div>
+
+        <h2>About CSS Grid</h2>
+
+        <div class="row">
+          <div class="column">
+            <p>
+              CSS Grid Layout is a two-dimensional layout method for the web. It
+              lets you create complex responsive web design layouts more easily
+              and consistently across browsers.
+            </p>
+          </div>
+          <div class="column">
+            <img
+              src="https://plus.unsplash.com/premium_photo-1683121352005-2f72986a518e?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8bWFueSUyMHBlb3BsZSUyMHdvcmtpbmclMjB0b2dldGhlcnxlbnwwfHwwfHx8MA%3D%3D"
+              alt="many people collaborating on a computer" />
+          </div>
+        </div>
+      </main>
+
+      <footer class="footer">
+        <p>&copy; 2024 MyWebsite. All rights reserved.</p>
+      </footer>
+    </div>
   </body>
 </html>
