--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
           <div class="column">
             <img
-              src="https://media.istockphoto.com/id/1720565768/photo/two-business-people-using-a-laptop-together-in-an-office.webp?a=1&b=1&s=612x612&w=0&k=20&c=jo4K9VExhrzHxkFxbzJmMFC1b9c4NxK8LZ-leeeNy-E="
+              src="./assets/image1.jpg"
               alt="two people collaborating on a computer" />
           </div>
         </div>
@@ -74,7 +74,7 @@
           </div>
           <div class="column">
             <img
-              src="https://plus.unsplash.com/premium_photo-1683121352005-2f72986a518e?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8bWFueSUyMHBlb3BsZSUyMHdvcmtpbmclMjB0b2dldGhlcnxlbnwwfHwwfHx8MA%3D%3D"
+              src="./assets/image2.jpg"
               alt="many people collaborating on a computer" />
           </div>
         </div>
