--- a/index.html
+++ b/index.html
@@ -93,9 +93,25 @@
       </main>
 
       <footer class="footer">
-        <div class="logo">TechVenture</div>
-        <p>&copy; 2024 MyWebsite. All rights reserved.</p>
-        <p>&copy; 2024 MyWebsite. All rights reserved.</p>
+        <div class="footer-col">
+          <div class="logo">TechVenture</div>
+        </div>
+        <div class="footer-col">
+          <h4>Quick Links</h4>
+          <ul>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h4>Contact</h4>
+          <p>Email: hello@techventure.com</p>
+          <p>Phone: 000000000</p>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2024 MyWebsite. All rights reserved.</p>
+        </div>
       </footer>
     </div>
   </body>
