--- a/index.html
+++ b/index.html
@@ -24,74 +24,78 @@
       </header>
 
       <main class="main">
-        <div class="row">
-          <div class="column">
-            <h1>Innovate Your Future with TechVenture</h1>
-            <p>
-              We build cuttin-edge technology solutions that transform business
-              and empower teams to achieve extraordinary results.
-            </p>
-            <div class="btn-flex">
-              <button class="btn-start">Get Started</button>
-              <button class="btn-more">Learn More</button>
+        <article id="home">
+          <div class="row">
+            <div class="column">
+              <h1>Innovate Your Future with TechVenture</h1>
+              <p>
+                We build cuttin-edge technology solutions that transform
+                business and empower teams to achieve extraordinary results.
+              </p>
+              <div class="btn-flex">
+                <button class="btn-start">Get Started</button>
+                <button class="btn-more">Learn More</button>
+              </div>
+            </div>
+            <div class="column">
+              <img
+                class="images"
+                id="first-image"
+                src="./assets/image1.jpg"
+                alt="two people collaborating on a computer" />
             </div>
           </div>
-          <div class="column">
-            <img
-              id="first-image"
-              src="./assets/image1.jpg"
-              alt="two people collaborating on a computer" />
-          </div>
-        </div>
+        </article>
+        <article id="features">
+          <h2>Our Core Features</h2>
+          <div class="content-grid">
+            <div class="card">
+              <i class="material-icons">emoji_objects</i>
 
-        <h2>Our Core Features</h2>
-        <div class="content-grid">
-          <div class="card">
-            <i class="material-icons">emoji_objects</i>
-
-            <h3>Smart Solutions</h3>
-            <p>
-              AI-powered technology that adapts to your business needs and grows
-              with your success.
-            </p>
+              <h3>Smart Solutions</h3>
+              <p>
+                AI-powered technology that adapts to your business needs and
+                grows with your success.
+              </p>
+            </div>
+            <div class="card">
+              <i class="material-icons">bolt</i>
+              <h3>Lightning Fast</h3>
+              <p>
+                Optimized performance that delivers results in milliseconds, not
+                minutes.
+              </p>
+            </div>
+            <div class="card">
+              <i class="material-icons">lock</i>
+              <h3>Secure & Reliable</h3>
+              <p>
+                Enterprise-grade security with 99.9% uptime guarantee for peace
+                of mind.
+              </p>
+            </div>
           </div>
-          <div class="card">
-            <i class="material-icons">bolt</i>
-            <h3>Lightning Fast</h3>
-            <p>
-              Optimized performance that delivers results in milliseconds, not
-              minutes.
-            </p>
+        </article>
+        <article id="about">
+          <div class="row">
+            <div class="column">
+              <h2>About TechVenture</h2>
+              <p>
+                CSS Grid Layout is a two-dimensional layout method for the web.
+                It lets you create complex responsive web design layouts more
+                easily and consistently across browsers.
+              </p>
+            </div>
+            <div class="column">
+              <img
+                class="images"
+                id="second-image"
+                src="./assets/image2.jpg"
+                alt="many people collaborating on a computer" />
+            </div>
           </div>
-          <div class="card">
-            <i class="material-icons">lock</i>
-            <h3>Secure & Reliable</h3>
-            <p>
-              Enterprise-grade security with 99.9% uptime guarantee for peace of
-              mind.
-            </p>
-          </div>
-        </div>
-
-        <h2>About TechVenture</h2>
-
-        <div class="row">
-          <div class="column">
-            <p>
-              CSS Grid Layout is a two-dimensional layout method for the web. It
-              lets you create complex responsive web design layouts more easily
-              and consistently across browsers.
-            </p>
-          </div>
-          <div class="column">
-            <img
-              id="second-image"
-              src="./assets/image2.jpg"
-              alt="many people collaborating on a computer" />
-          </div>
-        </div>
+        </article>
       </main>
-
       <footer class="footer">
         <div class="footer-col">
           <div class="logo">TechVenture</div>
@@ -99,12 +103,13 @@
         <div class="footer-col">
           <h4>Quick Links</h4>
           <ul>
+            <li><a href="#home">Home</a></li>
             <li><a href="#features">Features</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
-        <div class="footer-col">
+        <div class="footer-col" id="contact">
           <h4>Contact</h4>
           <p>Email: hello@techventure.com</p>
           <p>Phone: 000000000</p>
