adding some styling again

--- a/index.html
+++ b/index.html
@@ -85,6 +85,20 @@
                 It lets you create complex responsive web design layouts more
                 easily and consistently across browsers.
               </p>
+              <div class="flex-stats">
+                <div>
+                  <h1>500+</h1>
+                  <p>Project Completed</p>
+                </div>
+                <div>
+                  <h1>98%</h1>
+                  <p>Client Satisfaction</p>
+                </div>
+                <div>
+                  <h1>24/7</h1>
+                  <p>Support Available</p>
+                </div>
+              </div>
             </div>
             <div class="column">
               <img
