--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="column">
               <h1>Innovate Your Future with TechVenture</h1>
               <p>
-                We build cuttin-edge technology solutions that transform
+                We build cutting-edge technology solutions that transform
                 business and empower teams to achieve extraordinary results.
               </p>
               <div class="btn-flex">
@@ -37,7 +37,7 @@
                 <button class="btn-more">Learn More</button>
               </div>
             </div>
-            <div class="column">
+            <div>
               <img
                 class="images"
                 id="first-image"
@@ -100,7 +100,7 @@
                 </div>
               </div>
             </div>
-            <div class="column">
+            <div>
               <img
                 class="images"
                 id="second-image"
