--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
       <footer class="footer">
         <div class="footer-col">
           <div class="logo">TechVenture</div>
+          <p>Inovating the future, one solution at a time</p>
         </div>
         <div class="footer-col">
           <h4>Quick Links</h4>
